crates/tokmd-analysis-format/tests/snapshots/snapshots__analysis_jsonld_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshots.rs
expression: rendered
---
{
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeLines": 0,
  "commentCount": 0,
  "fileSize": 0,
  "interactionStatistic": {
    "@type": "InteractionCounter",
    "interactionType": "http://schema.org/ReadAction",
    "userInteractionCount": 0
  },
  "lineCount": 0,
  "name": "."
}
