crates/tokmd-analysis-format/tests/snapshots/snapshots__analysis_md_minimal.snap
---
source: crates/tokmd-analysis-format/tests/snapshots.rs
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
