crates/tokmd-analysis-format/tests/snapshots/snapshots__analysis_mermaid_with_imports.snap
---
source: crates/tokmd-analysis-format/tests/snapshots.rs
expression: rendered
---
graph TD
  mod_a -->|5| mod_b
  mod_b -->|2| mod_c
